# summariezer

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
configs/: example.toml
deploy/: summariezer.env.example
deploy/systemd/: summariezer-digest.service  summariezer-digest.timer
sample/: messages.jsonl
scripts/: run_digest_window.sh
summariezer/: __init__.py  chunking.py  cli.py  codex_runner.py  config.py  delivery.py  jsonl_ingest.py  models.py  prompting.py  rendering.py  storage.py  telegram_auth.py  telegram_dialogs.py  telegram_ingest.py  tokenization.py
tests/: test_chunking.py  test_codex_runner.py  test_config.py  test_delivery.py  test_prompting.py  test_storage.py  test_telegram_auth.py  test_telegram_dialogs.py  test_telegram_ingest.py
